--- a/student-info-app/package.json
+++ b/student-info-app/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.5.24"
+ "dependencies": {
+  "axios": "^1.13.4",
+  "vue": "^3.5.24",
+  "vue-router": "^4.0.0"
   },
+
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.2.4"
