--- a/student-info-app/package.json
+++ b/student-info-app/package.json
@@ -8,12 +8,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
- "dependencies": {
-  "axios": "^1.13.4",
-  "vue": "^3.5.24",
-  "vue-router": "^4.0.0"
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.13.4",
+    "bootstrap": "^5.3.8",
+    "vue": "^3.5.24",
+    "vue-router": "^4.0.0"
   },
-
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.2.4"
